--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
     "seed:core": "node src/seeds/seed.js",
     "seed:users": "node src/seeds/seedUsersFake.js",
     "seed:reviews": "node src/seeds/seedReviewsFake.js",
-    "admin:ensure": "node scripts/ensureAdmin.js"
+    "admin:ensure": "node scripts/ensureAdmin.js",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +27,7 @@
     "csv-parser": "^3.2.0",
     "csv-writer": "^1.6.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4",
